brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
• Waiting for background terminal (0s • esc to …
  └ cargo test -p brocode-core -- --exact…


› [PROMPT HERE]

  ? for shortcuts            100% context left
